# python-picsum

./: LICENSE  README.md  app.py  pyproject.toml
templates/: index.html  picsum.html
